# aves

./: .gitignore  LICENSE  README.md  README_new.md  build.sh  publish.sh  pyproject.toml  test_aves.py  tests.py
.build/: build.sh  publish.sh
aves/: __init__.py  __main__.py  aves.py  aves_onnx.py  utils.py
config/: default_cfg_aves-base-all.json  default_cfg_birdaves-biox-large.json
tests/: test_aves.py  tests.py
