[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aves"

version = "0.1.0"
description = "AVES package for audio feature extraction"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "soundfile>=0.13.0",
    "pytest>=8.3.4",
    "onnxruntime>=1.20.1",
]

[project.scripts]
aves = "aves.__main__:main"

[tool.setuptools]
packages = ["aves"]

[tool.setuptools.package-data]
aves = ["py.typed"]
